kubernetes/cluster/paperless/020-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: paperless
    app.kubernetes.io/version: "7.2.3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/part-of: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/component: broker
        app.kubernetes.io/part-of: paperless
        app.kubernetes.io/version: "7.2.3"
    spec:
      containers:
        - name: redis
          image: redis:7.2.3-alpine
          args: 
            - /usr/local/etc/redis/redis.conf
          ports:
            - containerPort: 6379
              name: tcp
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/redis/
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: redis-config
        - name: data
          persistentVolumeClaim:
            claimName: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: paperless
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: paperless
spec:
  ports:
    - name: tcp
      port: 6379
      targetPort: tcp
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: paperless
---
