kubernetes/cluster/paperless/030-tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless
  labels:
    app.kubernetes.io/name: tika
    app.kubernetes.io/component: data-extraction
    app.kubernetes.io/part-of: paperless
    app.kubernetes.io/version: "3.2.3.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika
      app.kubernetes.io/part-of: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tika
        app.kubernetes.io/component: data-extraction
        app.kubernetes.io/part-of: paperless
        app.kubernetes.io/version: "3.2.3.0"
    spec:
      containers:
        - name: tika
          image: apache/tika:3.2.3.0
          ports:
            - containerPort: 9998
              name: tcp
          resources:
            limits:
              cpu: 500m
              memory: 600Mi
            requests:
              cpu: 500m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless
  labels:
    app.kubernetes.io/name: tika
    app.kubernetes.io/component: data-extraction
    app.kubernetes.io/part-of: paperless
spec:
  ports:
    - name: tcp
      port: 9998
      targetPort: tcp
  selector:
    app.kubernetes.io/name: tika
    app.kubernetes.io/part-of: paperless
---
