kubernetes/cluster/paperless/040-gotenberg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless
  labels:
    app.kubernetes.io/name: gotenberg
    app.kubernetes.io/component: format-conversion
    app.kubernetes.io/part-of: paperless
    app.kubernetes.io/version: "7.10.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotenberg
      app.kubernetes.io/part-of: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotenberg
        app.kubernetes.io/component: format-conversion
        app.kubernetes.io/part-of: paperless
        app.kubernetes.io/version: "7.10.2"
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:7.10.2
          command: 
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
            - --libreoffice-start-timeout=45s
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless
  labels:
    app.kubernetes.io/name: gotenberg
    app.kubernetes.io/component: format-conversion
    app.kubernetes.io/part-of: paperless
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: gotenberg
    app.kubernetes.io/part-of: paperless
---
