kubernetes/cluster/paperless/050-paperless-nx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/part-of: paperless
    app.kubernetes.io/version: "2.2.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/part-of: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/component: paperless-ngx
        app.kubernetes.io/part-of: paperless
        app.kubernetes.io/version: "2.2.1"
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
        - name: temp
          persistentVolumeClaim:
            claimName: paperless-temp
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.2.1
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 3
            failureThreshold: 10
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /usr/paperless/data
            - name: media
              mountPath: /usr/paperless/media
            - name: consume
              mountPath: /usr/paperless/consume
            - name: temp
              mountPath: /usr/paperless/temp
          resources:
            limits:
              cpu: 1000m
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 600Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/part-of: paperless
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - paperless
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: paperless-ngx
            port:
              name: http
---
